<resources>
    <string name="app_name">TakeAuto</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="login_info">Enter username and password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_lost_info">Press the button below to recover your password</string>
    <string name="password_lost">Password recovery</string>
    <string name="Insert_data">Insert your info…</string>
    <string name="Insert_email">Email…</string>
    <string name="password_confirm">Confirm password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone number</string>
    <string name="postal_Address">Postal address</string>
    <string name="fiscalCode">fiscal Code</string>
    <string name="title_parking">Parking status</string>
    <string name="insert_booking">insert booking info</string>
    <string name="start_booking">start date…</string>
    <string name="end_booking">end date…</string>
    <string name="add_button">Add Data</string>
</resources>