<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <TextView
        android:id="@+id/textRegistration"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="208dp"
        android:text="@string/Insert_data"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="208dp" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="316dp"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="73dp"
        android:ems="10"
        android:hint="@string/Insert_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegistration"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="73dp" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="316dp"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="73dp" />

    <EditText
        android:id="@+id/passwordRegistration"
        android:layout_width="316dp"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="73dp" />

    <EditText
        android:id="@+id/passwordRegistrationConfirm"
        android:layout_width="316dp"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:ems="10"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegistration"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="73dp" />

    <EditText
        android:id="@+id/dateOfBirth"
        android:layout_width="316dp"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegistrationConfirm"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="72dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="316dp"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateOfBirth"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="72dp" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="121dp"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiscalCode"
        android:layout_marginLeft="134dp"
        android:layout_marginRight="135dp" />

    <EditText
        android:id="@+id/fiscalCode"
        android:layout_width="316dp"
        android:layout_height="42dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="73dp"
        android:ems="10"
        android:hint="@string/fiscalCode"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="73dp" />
</androidx.constraintlayout.widget.ConstraintLayout>